test/files/pos/t1196/J.java
class J { static void foo(Class c) { } }
