test/files/neg/t6289/J.java
public class J {
  @Override public void foo() { }

  public void bar() { foo(); }
}
